--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"G:\\Documents\\javacode2\\xml\\lib\\dom4j-1.6.1.jar","type":"JAR","hints":{}},"ABSENT"],[{"location":"D:\\Java\\common-jre","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"G:\\Documents\\javacode2\\xml","type":"PROJECT","hints":{"PROJECT_NAME":"xml"}},"ABSENT"]]
